--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^4.5.0",
     "chartjs-plugin-dragdata": "^2.3.1",
     "firebase": "^12.0.0",
+    "framer-motion": "^12.23.12",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
