--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -30,6 +30,7 @@ httpx==0.28.1
 hyperframe==6.1.0
 idna==3.10
 jiter==0.10.0
+motor==3.7.1
 msgpack==1.1.1
 openai==1.97.1
 proto-plus==1.26.1
@@ -40,7 +41,7 @@ pycparser==2.22
 pydantic==2.11.7
 pydantic_core==2.33.2
 PyJWT==2.10.1
-pymongo==4.13.2
+pymongo==4.14.0
 python-dotenv==1.1.1
 requests==2.32.4
 rsa==4.9.1
