--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-  "axios": "^1.7.7",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.7.7",
     "chart.js": "^4.5.0",
     "chartjs-plugin-dragdata": "^2.3.1",
     "firebase": "^12.0.0",
@@ -23,6 +23,7 @@
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
+    "react-markdown": "^10.1.0",
     "react-rnd": "^10.5.2",
     "react-router-dom": "^7.7.1",
     "swiper": "^11.2.10",
