--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-markdown": "^10.1.0",
     "react-rnd": "^10.5.2",
     "react-router-dom": "^7.7.1",
+    "rehype-raw": "^7.0.0",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11"
   },
