--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     container_name: ambag-backend
     environment:
       - OPENROUTER_API_KEY=${OPENROUTER_API_KEY}
-      - MONGODB_URL=${MONGODB_URL}
+      - MONGODB_URI=${MONGODB_URI}
       - FIREBASE_CRED_PATH=app/ambag-auth.json
     restart: always
     expose:
