--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,26 +1,38 @@
-worker_processes 1;
-
-events { worker_connections 1024; }
+events {
+    worker_connections 1024;
+}
 
 http {
-    include       mime.types;
+    include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
-    sendfile        on;
-    keepalive_timeout  65;
-
+    # Frontend server
     server {
         listen 80;
-
-        location /api/ {
-            proxy_pass http://ambag-backend:8000/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
+        server_name _;
+        
+        # Serve static frontend files
+        location / {
+            root /usr/share/nginx/html;
+            try_files $uri $uri/ /index.html;
         }
 
-        location / {
-            proxy_pass http://ambag-frontend:3000/;
-            try_files $uri $uri/ /index.html;
+        # Proxy API calls to backend
+        location /api/ {
+            proxy_pass https://ambag-backend.onrender.com/api/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Proxy auth calls to backend
+        location /auth/ {
+            proxy_pass https://ambag-backend.onrender.com/auth/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 }
