--- a/render.yaml
+++ b/render.yaml
@@ -13,7 +13,7 @@ services:
     envVars:
       - key: OPENROUTER_API_KEY
         sync: false
-      - key: MONGODB_URL
+      - key: MONGODB_URI
         sync: false
       - key: FIREBASE_CRED_PATH
         sync: false
