--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -4,7 +4,7 @@ FROM node:20-alpine AS builder
 WORKDIR /app
 
 # Install dependencies
-COPY frontend/package*.json ./
+COPY package*.json ./
 RUN npm ci
 
 # Copy source code
