--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -18,8 +18,8 @@ FROM nginx:alpine
 # Copy built assets from builder
 COPY --from=builder /app/dist /usr/share/nginx/html
 
-# Optional: custom nginx config
-COPY frontend/nginx.conf /etc/nginx/conf.d/default.conf
+# Optional: custom nginx config!
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 
